syntax = "proto3";


option go_package = "api/";
import "google/protobuf/any.proto";
package apiproto;

service UserService{
  rpc CreateUser (user) returns (AuthDto);
  rpc GetUser (userID) returns (UserDto);
  rpc DeleteUserById (userID) returns (responseMessage);
  rpc UpdateUserById (user) returns (responseMessage);
  rpc GetAllUser (Null) returns (responseUsersDto);
  rpc SignIn (Authentication) returns (AuthDto);
}
message Null{}
message user{
  string Name = 1;
  string Email = 2;
  string Password = 3;
  string Role = 4;
  string ID = 5;
}
message responseMessage{
  string Message = 1;
}
message UserDto{
  string ID = 1;
  string Name = 2;
  string Email = 3;

}
message responseUsersDto{
  repeated  UserDto uDto = 1;
}
message AuthDto{
  repeated UserDto UserDto = 1;
  string Token = 2;
}

message Authentication{
  string Email = 1;
  string Password = 2;
}
message userID{
  string userId = 1;
}

message response{
  repeated google.protobuf.Any res = 1;
}


message Token{
  string ID = 1;
  string Role = 2;
  string Email = 3;
  string TokenString = 4;
}
